# stepmotor_inf

./: .gitignore  CMakeLists.txt  README.md
scripts/: openocd_stlink_l0x.cfg  serialcmd.py
src/app/: app_main.c  app_main.h  comm.c  comm.h  timer.c  timer.h
src/common/: debug.c  debug.h  hal_stm32.h  interval.c  interval.h  queue.c  queue.h  uart.c  uart.h
targets/: common.cmake  init.cmake
targets/stepMotorInf/: CMakeLists.txt  Makefile  STM32L071CBTx_FLASH.ld  app.ld  stepMotorInf.ioc
targets/stepMotorInf/Core/Inc/: main.h  stm32l0xx_hal_conf.h  stm32l0xx_it.h
targets/stepMotorInf/Core/Src/: main.c  stm32l0xx_hal_msp.c  stm32l0xx_it.c
